Extract Word and Excel diagram content for RAG
Preserve diagram text and saved connections in Markdown and JSON, add composite previews and updated examples, and treat oval and diamond endpoints as non-directional decorations.